# smriti

./: .env.example  .gitignore  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
docs/: ARCHITECTURE.md  Smriti_PRD_v2.md
docs/team/: person-1-pipeline.md  (+3 more)
graphify-out/: .graphify_labels.json  GRAPH_REPORT.md  graph.html  graph.json  manifest.json
mcp/: .env.example  .gitignore  README.md  deploy-project.mjs  package-lock.json  package.json
nitrochat/: .env.example  .env.smriti.example  .gitignore  ARCHITECTURE.md  CHANGELOG.md  Dockerfile  NITROCHAT_CREDITS_MIGRATION.md  PROJECT_OVERVIEW.md  README.md  buildspec.yml  debug-test.js  debug_mcp.js  middleware.ts  next.config.mjs  nitrochat.config.ts  package-lock.json  package.json  tailwind.config.ts  test-sse.html  tsconfig.json
parser/: analytics.py  cli.py  connectors_cli.py  executor.py  gemini_client.py  mcp_bridge.py  registry.py  requirements-connectors.txt  requirements.txt  schemas.py  templates-manifest.json  write_parquet.py
registry/: backup_dsl.json
samples/: README.md
scripts/: dev-local.sh  generate_synthetic_samples.py  reset-workspace.sh  setup.sh  test-all-mcp-tools.mjs  test-deployed-mcp-session.mjs  test-deployed-mcp.mjs  test-desktop-chat.mjs  test-local-data.mjs  test-local-stack.mjs  test-mcp.mjs
shared/: constants.d.ts  constants.d.ts.map  constants.js  constants.js.map  constants.ts  types.ts
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: commands.rs  db.rs  lib.rs  main.rs  mcp.rs  models.rs  pipeline.rs
(+178 files in other folders)
